--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
    <head>
       <!-- basic -->
       <meta charset="utf-8">
@@ -27,6 +28,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
+
+
    <!-- body -->
    <body class="main-layout">
       <!-- loader  -->
@@ -67,10 +70,10 @@
                                  <a href="contact.html">Contact us</a>
                               </li>
                               <li>
-                                 <a href="#">Login</a>
+                                 <a href="login.html">Login</a>
                               </li>
                               <li>
-                                 <a href="#">Register</a>
+                                 <a href="register.html">Register</a>
                               </li>
                               <li>
                                  <a href="#"><img src="images/search_icon.png" alt="#" /></a>
@@ -85,6 +88,8 @@
          <!-- end header inner -->
       </header>
       <!-- end header -->
+
+
       <!-- revolution slider -->
       <div class="banner-slider">
          <div class="container-fluid">
@@ -124,6 +129,8 @@
          </div>
       </div>
       <!-- end revolution slider -->
+
+
       <!-- section --> 
       <div class="section layout_padding">
          <div class="container">
@@ -168,6 +175,8 @@
          </div>
       </div>
       <!-- end section -->
+
+
       <!-- section --> 
       <div class="section layout_padding dark_bg">
          <div class="container">
@@ -193,6 +202,8 @@
          </div>
       </div>
       <!-- end section -->
+
+
       <!-- section -->
       <section class="layout_padding">
          <div class="container">
@@ -283,6 +294,8 @@
          </div>
       </section>
       <!-- end section -->
+
+
       <!-- section --> 
       <div class="section layout_padding blog_blue_bg light_silver">
          <div class="container">
@@ -310,6 +323,8 @@
          </div>
       </div>
       <!-- end section -->
+
+      
       <!-- footer -->
       <footer>
          <div class="container">
