--- a/marketing.html
+++ b/marketing.html
@@ -67,7 +67,7 @@
                                  <a href="contact.html">Contact us</a>
                               </li>
                               <li>
-                                 <a href="#">Login</a>
+                                 <a href="login.html">Login</a>
                               </li>
                               <li>
                                  <a href="#">Register</a>
