--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
                             <li ">
                                <a href="index.html">Home</a>
                             </li>
-                            <li class="active">
+                            <li >
                                <a href="about.html">About</a>
                             </li>
                             <li>
@@ -70,7 +70,7 @@
                             <li>
                                <a href="login.html">Login</a>
                             </li>
-                            <li>
+                            <li class="active">
                                <a href="register.html">Register</a>
                             </li>
                             <li>
@@ -102,11 +102,8 @@
  </div>
  
  <!---------------------------register page---------------------------------->
- 
-       <div class="section layout_padding">
-          <div class="container">
-
-            <div class="center">
+         <div class="singin">
+            <div class="centerreg">
                 <form action="register.php" method="post">
                     <div class="txt_field">
                         <input type="text" name="reg_username" required>
@@ -122,11 +119,11 @@
                     </div>
                     <div class="txt_field">
                         <input type="text" name="reg_address" >
-                        <label for="reg_address"><Address></Address></label>
+                        <label for="reg_address"><Address>Address</Address></label>
                     </div>
                     <div class="txt_field">
                         <input type="password" name="reg_password" maxlength="12" required>
-                        <label for="reg_password">password</label>
+                        <label for="reg_password">Password</label>
                     </div>
                     <div class="txt_field">
                         <input type="password" name="reg_conpassword" maxlength="12" required>
@@ -138,8 +135,8 @@
                     </div>
                 </form>
             </div>
-          </div>
-       </div>
+         </div>
+
        <!-- end section -->
 
    
