--- a/blog.html
+++ b/blog.html
@@ -67,10 +67,10 @@
                                  <a href="contact.html">Contact us</a>
                               </li>
                               <li>
-                                 <a href="login.html">Login</a>
+                                 <a href="login.php">Login</a>
                               </li>
                               <li>
-                                 <a href="register.html">Register</a>
+                                 <a href="register.php">Register</a>
                               </li>
                               <li>
                                  <a href="#"><img src="images/search_icon.png" alt="#" /></a>
