--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                  <a href="login.php">Login</a>
                               </li>
                               <li>
-                                 <a href="register.php">Register</a>
+                                 <a href="register.html">Register</a>
                               </li>
                               <li>
                                  <a href="#"><img src="images/search_icon.png" alt="#" /></a>
