--- a/register.html
+++ b/register.html
@@ -30,6 +30,7 @@
 
 
 <!----------------------------- php database connectivity ------------------------------->
+<!--
 <?php
 
 $servername="localhost";
@@ -57,7 +58,7 @@ if(isset($_POST["register"])){
 }
 
 mysqli_close($conn);
-?>
+?>-->
 
    <!-- body -->
    <body class="main-layout">
@@ -132,41 +133,47 @@ mysqli_close($conn);
     </div>
  </div>
  
- <!---------------------------register page---------------------------------->
-      <div class="col-lg-2 col-md-6">
+ <!---------------------------register page---------------------------------->   
+         <div class="main-registration"> 
             <div class="centerreg">
-                <form class="reform" action="register.php" method="post">
+                  <form action="register.php" method="post">
                     <div class="txt_field">
                         <input type="text" name="reg_username" required>
+                        <span></span>
                         <label for="reg_username">Username</label>
                     </div>
                     <div class="txt_field">
                         <input type="text" name="reg_email" required>
+                        <span></span>
                         <label for="reg_email">Email ID</label>
                     </div>
                     <div class="txt_field">
-                        <input type="number" name="reg_contact" maxlength="10">
+                        <input type="number" name="reg_contact" maxlength="10" required>
+                        <span></span>
                         <label for="reg_contact">Contact</label>
                     </div>
                     <div class="txt_field">
-                        <input type="text" name="reg_address" >
-                        <label for="reg_address"><Address>Address</Address></label>
+                        <input type="text" name="reg_address" required>
+                        <span></span>
+                        <label for="reg_address">Address</label>
                     </div>
                     <div class="txt_field">
                         <input type="password" name="reg_password" maxlength="12" required>
+                        <span></span>
                         <label for="reg_password">Password</label>
                     </div>
                     <div class="txt_field">
                         <input type="password" name="reg_conpassword" maxlength="12" required>
+                        <span></span>
                         <label for="reg_conpassword">Confirm Password</label>
                     </div>
                     <input type="submit" name="register" value="Register">
-                    <div class="login_link">
+                    <div class="signup_link">
                         Already registered? <a href="login.html">login</a>
                     </div>
-                </form>
+                  </form>
             </div>
-      </div> 
+         </div> 
        <!-- end section -->
 
    
