--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                  <a href="contact.html">Contact us</a>
                               </li>
                               <li>
-                                 <a href="login.php">Login</a>
+                                 <a href="login.html">Login</a>
                               </li>
                               <li>
                                  <a href="register.html">Register</a>
